<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ClipBoredApp</string>
    <string name="action_settings">Settings</string>
    <string name="playerview_text">This is a ClipBored!</string>
    <string name="categories">Categories</string>
    <string name="user_login">User Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="categories_hint">Categories of interest</string>
    <string name="signup">Sign Up</string>
    <string name="title_categories_select">Please choose one or more categories</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="category_sports">Sports</string>
    <string name="category_arts">Arts</string>
    <string name="category_healthBeauty">Health and Beauty</string>
    <string name="category_sciences">Sciences</string>

</resources>
