<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
<CheckBox 
    android:id="@+id/checkbox_sports"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:text="@string/category_sports">
</CheckBox>
<CheckBox 
    android:id="@+id/checkbox_arts"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:text="@string/category_arts">
</CheckBox>
<CheckBox 
    android:id="@+id/checkbox_healthBeauty"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/category_healthBeauty">
</CheckBox>
<CheckBox 
    android:id="@+id/checkbox_sciences"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:text="@string/category_sciences">
</CheckBox>
</LinearLayout>