<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/usernameSignUp"
        android:hint="@string/username_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        </EditText>
    
    <EditText
        android:id="@+id/passwordSignUp"
        android:hint="@string/password_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword" >
        </EditText>
        
    <EditText
        android:id="@+id/email"
        android:hint="@string/email_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:inputType="textEmailAddress">
        </EditText>
    
    <EditText
        android:id="@+id/categoriesSignUp"
        android:hint="@string/categories_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        </EditText>
    

</LinearLayout>
